--- a/folio/pubspec.yaml
+++ b/folio/pubspec.yaml
@@ -60,13 +60,21 @@ dependencies:
 
   # cache
   shared_preferences: ^2.0.6
-
+  # change_app_package_name:
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+#   flutter_launcher_icons: ^0.13.1
+# flutter_launcher_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/foliooo.jpg"
+#   min_sdk_android: 21   
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
